# Upside-MD

./: .gitignore  Doxyfile  LICENSE  README.md  get_new_version  initial_setup
parameters/common/: rama_reference.pkl
parameters/ff_1/: environment.h5  hbond  sheet  sidechain.h5
parameters/packing/: sidechain_10A_cutoff.h5  sidechain_full.h5
parameters/packing/ablations/: sidechain_fixedscalar.h5  sidechain_no_HO.h5  sidechain_no_directional.h5  sidechain_no_hyd.h5  sidechain_no_interaction.h5  sidechain_no_scbb.h5  sidechain_no_scsc.h5  sidechain_only_repulsive.h5
py/: PDB_to_initial_structure.py  P_of_r.py  analysis.py  extract_vtf.py  find_rotamer.py  gdb_upside.py  mdtraj_upside.py  mpi_collective_object.py  multi_igraph.py  predict_chi1.py  rotamer_parameter_estimation.py  run_upside.py  sidechain_interaction.py  sim_timeseries.py  tensorflow_upside.py  ugly_hack_break_chain.py  upside_config.py  upside_engine.py
src/: CMakeLists.txt  Float4.h  PDB-to-initial-structure.py  PDB_to_initial_structure.py  P_of_r.py  add_target_information.py  affine.h  analysis.cpp  analyze_rdc.py  attr_overview  attraction.cpp  attraction.h  backbone_dependent_sidechain.cpp  backbone_dependent_sidechain.h  backbone_steric.cpp  basin_correlation.cpp  bead_interaction.h  bonds.cpp  compute_rotamer_centers.cpp  compute_rotamer_pos.cpp  convert_nonbond_to_sidechain_format.py  coord.h  deriv_engine.cpp  deriv_engine.h  diagnostic.py  dihedral_range.cpp  doxyfile  eig.cpp  energy_blame.py  engine_c_library.cpp  engine_c_library.h  environment.cpp  estimate_rama_distributions.py  extract-vtf.py  extract_vtf.py  force.cpp  force.h  generate_from_rotamer.cpp  generate_from_rotamer.h  gpu.h  (+59 more)
